# code-context-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  server.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: benchmarks.md  index.html
docs-src/: astro.config.mjs  package-lock.json  package.json
docs-src/src/content/docs/: cli-reference.md  configuration.md  faq.md  getting-started.md  how-it-works.md  index.mdx  introduction.md  savings-tracking.md  why-cce.md
docs-src/src/content/docs/agents/: codex.md  copilot.md  cursor.md  gemini.md  opencode.md  overview.md  tabnine.md
docs/guide/: 404.html  index.html  sitemap-0.xml  sitemap-index.xml
docs/guide/_astro/: Search.astro_astro_type_script_index_0_lang.Cc1riBdC.js  index.Bb6Kw-GX.css  ui-core.Gsl9Yx60.js
docs/guide/agents/claude/: index.html
docs/guide/agents/codex/: index.html
docs/guide/agents/copilot/: index.html
docs/guide/agents/cursor/: index.html
docs/guide/agents/gemini/: index.html
docs/guide/agents/opencode/: index.html
docs/guide/agents/overview/: index.html
docs/guide/agents/tabnine/: index.html
docs/guide/cli-reference/: index.html
docs/guide/configuration/: index.html
docs/guide/faq/: index.html
docs/guide/getting-started/: index.html
docs/guide/how-it-works/: index.html
docs/guide/introduction/: index.html
docs/guide/pagefind/: pagefind-entry.json  pagefind.en_1142858afc.pf_meta  pagefind.en_739fafe83c.pf_meta  pagefind.en_c24e992544.pf_meta
docs/guide/pagefind/fragment/: en_10461df.pf_fragment  en_235fdee.pf_fragment  en_27bbe91.pf_fragment  en_280a4ac.pf_fragment  en_29c695e.pf_fragment  en_3973d89.pf_fragment  en_456eeb3.pf_fragment  en_61a169c.pf_fragment  en_8189e71.pf_fragment  en_8cc43ed.pf_fragment  en_9fdde8d.pf_fragment  en_a566a9f.pf_fragment  en_aa33da6.pf_fragment  en_aaf2477.pf_fragment  en_bfe740b.pf_fragment  en_d0e3d66.pf_fragment  en_ea3d7ec.pf_fragment  en_ec9dfee.pf_fragment  en_f0d057c.pf_fragment  en_f1ad9c9.pf_fragment  en_f7adaf5.pf_fragment  en_f81f724.pf_fragment  en_f84db5f.pf_fragment
docs/guide/pagefind/index/: en_1d2b6ee.pf_index  en_864fb49.pf_index  en_a7d683e.pf_index
docs/guide/savings-tracking/: index.html
docs/guide/why-cce/: index.html
docs/wiki/: CCE-In-Practice.md  CLI-Reference.md  Examples.md  Home.md
src/context_engine/: cli.py  config.py  editors.py  pricing.py  project_commands.py  utils.py
src/context_engine/compression/: output_rules.py
src/context_engine/dashboard/: _page.py
src/context_engine/indexer/: chunker.py  embedder.py  embedding_cache.py  git_hooks.py  pipeline.py  watcher.py
src/context_engine/integration/: mcp_server.py
src/context_engine/memory/: compressor.py  db.py  decision_extractor.py  hook_server.py  hooks.py
src/context_engine/storage/: fts_store.py  graph_store.py  vector_store.py
tests/: test_cli_init_agents.py  test_cli_savings.py  test_cli_savings_e2e.py  test_cli_smoke.py  test_cli_uninstall.py  test_editors_codex.py  test_project_commands.py
tests/indexer/: test_chunker.py  test_embedder.py  test_embedder_backends.py  test_watcher.py
tests/integration/: test_mcp_server.py
tests/memory/: test_decision_extractor.py  test_hook_server_cleanup.py  test_hooks.py
